--- a/lang/English.ini
+++ b/lang/English.ini
@@ -2,3 +2,10 @@ module_name = "Report Tweaks"
 module_desc = "Configurable Display Enhancments for REDCap Reports"
 module_info = "This module is configured via the edit report screen. Individual user configuration is saved via a cookie on the user's browser.<br><br><a>Click here to view all saved configuration.</a>"
 module_json = "<b>Json Object</b>"
+
+dash_event = "Include <code>redcap_event_name</code> in the report."
+dash_combine = "Combine rows representing the same record."
+dash_empty = "Remove rows with no data (i.e. empty) other than <code>redcap_</code> variables and <code>record_id</code>."
+dash_writeback = "Add a button to write data back to the database. Useful for removing records from a report or flagging records as reviewed."
+dash_config = "Configure"
+
