More i18n, resolving issues with redcap js object

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -3,9 +3,33 @@ module_desc = "Configurable Display Enhancments for REDCap Reports"
 module_info = "This module is configured via the edit report screen. Individual user configuration is saved via a cookie on the user's browser.<br><br><a>Click here to view all saved configuration.</a>"
 module_json = "<b>Json Object</b>"
 
+; Edit Page
 dash_event = "Include <code>redcap_event_name</code> in the report."
 dash_combine = "Combine rows representing the same record."
 dash_empty = "Remove rows with no data (i.e. empty) other than <code>redcap_</code> variables and <code>record_id</code>."
 dash_writeback = "Add a button to write data back to the database. Useful for removing records from a report or flagging records as reviewed."
 dash_config = "Configure"
 
+; View Page (Todo - add to js)
+popover = "Copy data below to clipboard"
+
+; Edit Page Modal (Todo - add to js)
+modal_0 = "DB Writeback Config"
+
+; View Page Modal (Todo - add to js)
+modal_1  = "No Records"
+modal_2  = "Nothin' to do boss"
+modal_3  = "No Record ID"
+modal_4  = "You must include {0} on your report to write back to the database."
+modal_5  = "No Write Field Defined"
+modal_6  = "Please review the writeback configuration and define a field that should be written to."
+modal_7  = "Already Written"
+modal_8  = "You've already written once to the database. Please refresh the page before writing again."
+modal_9  = "Are you sure?"
+modal_10 = "Write to DB"
+modal_11 = "Oops..."
+modal_12 = "There was an issue writing back to the database. If possible, leave this window open and contact a RedCap Administrator"
+modal_13 = "Possible Issue"
+modal_14 = "There was an issue writing back to the database. If possible, leave this window open and contact a RedCap Administrator"
+modal_15 = "Write Back Complete"
+modal_16 = "Data was successfully written to {0} records"
