All templates now use the i18n code

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -10,26 +10,40 @@ dash_empty = "Remove rows with no data (i.e. empty) other than <code>redcap_</co
 dash_writeback = "Add a button to write data back to the database. Useful for removing records from a report or flagging records as reviewed."
 dash_config = "Configure"
 
-; View Page (Todo - add to js)
+; View Page
 popover = "Copy data below to clipboard"
+filter = "Filter Range On..."
+hide_event = "Hide Event Column"
+hide_repeat = "Hide Repeating Form Columns"
 
-; Edit Page Modal (Todo - add to js)
-modal_0 = "DB Writeback Config"
+; Edit Page Modal
+modal_edit_1  = "DB Writeback Config"
+modal_edit_2  = "Mark as Complete"
+modal_edit_3  = "Explination here. You can use HTML tags!"
+modal_edit_4  = "Event"
+modal_edit_5  = "NA/Pull From Report"
+modal_edit_6  = "Field"
+modal_edit_7  = "Write Value"
+modal_edit_8  = "Ask User for Write Value"
+modal_edit_9  = "Static"
+modal_edit_10 = "Today's Date"
+modal_edit_11 = "Allow Data Overwrites"
+modal_edit_12 = "Increment Write Value per Row"
 
 ; View Page Modal (Todo - add to js)
-modal_1  = "No Records"
-modal_2  = "Nothin' to do boss"
-modal_3  = "No Record ID"
-modal_4  = "You must include {0} on your report to write back to the database."
-modal_5  = "No Write Field Defined"
-modal_6  = "Please review the writeback configuration and define a field that should be written to."
-modal_7  = "Already Written"
-modal_8  = "You've already written once to the database. Please refresh the page before writing again."
-modal_9  = "Are you sure?"
-modal_10 = "Write to DB"
-modal_11 = "Oops..."
-modal_12 = "There was an issue writing back to the database. If possible, leave this window open and contact a RedCap Administrator"
-modal_13 = "Possible Issue"
-modal_14 = "There was an issue writing back to the database. If possible, leave this window open and contact a RedCap Administrator"
-modal_15 = "Write Back Complete"
-modal_16 = "Data was successfully written to {0} records"
+modal_view_1  = "No Records"
+modal_view_2  = "Nothin' to do boss"
+modal_view_3  = "No Record ID"
+modal_view_4  = "You must include {0} on your report to write back to the database."
+modal_view_5  = "No Write Field Defined"
+modal_view_6  = "Please review the writeback configuration and define a field that should be written to."
+modal_view_7  = "Already Written"
+modal_view_8  = "You've already written once to the database. Please refresh the page before writing again."
+modal_view_9  = "Are you sure?"
+modal_view_10 = "Write to DB"
+modal_view_11 = "Oops..."
+modal_view_12 = "There was an issue writing back to the database. If possible, leave this window open and contact a RedCap Administrator"
+modal_view_13 = "Possible Issue"
+modal_view_14 = "There was an issue writing back to the database. If possible, leave this window open and contact a RedCap Administrator"
+modal_view_15 = "Write Back Complete"
+modal_view_16 = "Data was successfully written to {0} records"
