--- a/lang/English.ini
+++ b/lang/English.ini
@@ -30,7 +30,7 @@ modal_edit_10 = "Today's Date"
 modal_edit_11 = "Allow Data Overwrites"
 modal_edit_12 = "Increment Write Value per Row"
 
-; View Page Modal (Todo - add to js)
+; View Page Modal
 modal_view_1  = "No Records"
 modal_view_2  = "Nothin' to do boss"
 modal_view_3  = "No Record ID"
