Minor doc and string updates

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -42,8 +42,8 @@ modal_view_8  = "You've already written once to the database. Please refresh the
 modal_view_9  = "Are you sure?"
 modal_view_10 = "Write to DB"
 modal_view_11 = "Oops..."
-modal_view_12 = "There was an issue writing back to the database. If possible, leave this window open and contact a RedCap Administrator"
+modal_view_12 = "There was an issue writing back to the database. Please contact a REDCap Administrator."
 modal_view_13 = "Possible Issue"
-modal_view_14 = "There was an issue writing back to the database. If possible, leave this window open and contact a RedCap Administrator"
+modal_view_14 = "There was an issue writing back to the database. Please contact a REDCap Administrator."
 modal_view_15 = "Write Back Complete"
 modal_view_16 = "Data was successfully written to {0} records"
