Updating placeholders in strings

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -34,7 +34,7 @@ modal_edit_12 = "Increment Write Value per Row"
 modal_view_1  = "No Records"
 modal_view_2  = "Nothin' to do boss"
 modal_view_3  = "No Record ID"
-modal_view_4  = "You must include {0} on your report to write back to the database."
+modal_view_4  = "You must include _ on your report to write back to the database."
 modal_view_5  = "No Write Field Defined"
 modal_view_6  = "Please review the writeback configuration and define a field that should be written to."
 modal_view_7  = "Already Written"
@@ -46,4 +46,4 @@ modal_view_12 = "There was an issue writing back to the database. Please contact
 modal_view_13 = "Possible Issue"
 modal_view_14 = "There was an issue writing back to the database. Please contact a REDCap Administrator."
 modal_view_15 = "Write Back Complete"
-modal_view_16 = "Data was successfully written to {0} records"
+modal_view_16 = "Data was successfully written to _ records"
