--- a/lang/English.ini
+++ b/lang/English.ini
@@ -7,6 +7,7 @@ module_json = "<b>Json Object</b>"
 dash_event = "Include <code>redcap_event_name</code> in the report."
 dash_combine = "Combine rows representing the same record."
 dash_empty = "Remove rows with no data (i.e. empty) other than <code>redcap_</code> variables and <code>record_id</code>."
+dash_range = "Add a date range live filter for common time periods. Date field: "
 dash_writeback = "Add a button to write data back to the database. Useful for removing records from a report or flagging records as reviewed."
 dash_config = "Configure"
 
@@ -15,6 +16,7 @@ popover = "Copy data below to clipboard"
 filter = "Filter Range On..."
 hide_event = "Hide Event Column"
 hide_repeat = "Hide Repeating Form Columns"
+live_date = "Date Range"
 
 ; Edit Page Modal
 modal_edit_1  = "DB Writeback Config"
