Fix #1 Now checking for user rights before performing write back. Reporting error to user.

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -3,6 +3,10 @@ module_desc = "Configurable Display Enhancments for REDCap Reports"
 module_info = "This module is configured via the edit report screen. Individual user configuration is saved via a cookie on the user's browser.<br><br><a>Click here to view all saved configuration.</a>"
 module_json = "<b>Json Object</b>"
 
+; Warnings
+warning_1 = "You do not have permission to write to that field."
+warning_2 = "No data to write."
+
 ; Edit Page
 dash_event = "Include <code>redcap_event_name</code> in the report."
 dash_combine = "Combine rows representing the same record."
@@ -45,7 +49,8 @@ modal_view_9  = "Are you sure?"
 modal_view_10 = "Write to DB"
 modal_view_11 = "Oops..."
 modal_view_12 = "There was an issue writing back to the database. Please contact a REDCap Administrator."
-modal_view_13 = "Possible Issue"
+modal_view_13 = "An Error Occured"
 modal_view_14 = "There was an issue writing back to the database. Please contact a REDCap Administrator."
-modal_view_15 = "Write Back Complete"
-modal_view_16 = "Data was successfully written to _ records"
+modal_view_15 = "Issue"
+modal_view_16 = "Write Back Complete"
+modal_view_17 = "Data was successfully written to _ records"
