--- a/lang/English.ini
+++ b/lang/English.ini
@@ -14,6 +14,8 @@ dash_empty = "Remove rows with no data (i.e. empty) other than <code>redcap_</co
 dash_range = "Add a date range live filter for common time periods. Date field: "
 dash_writeback = "Add a button to write data back to the database. Useful for removing records from a report or flagging records as reviewed."
 dash_config = "Configure"
+dash_select = "Allow row selection (if record_id available!)"
+
 
 ; View Page
 popover = "Copy data below to clipboard"
