Advanced_logic branch
-check box in editor page (template + Englisch)
-SQL request (ReportTweaks.php)
-Button + Bootstrap fn (viewTweaks)

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -14,6 +14,7 @@ dash_empty = "Remove rows with no data (i.e. empty) other than <code>redcap_</co
 dash_range = "Add a date range live filter for common time periods. Date field: "
 dash_writeback = "Add a button to write data back to the database. Useful for removing records from a report or flagging records as reviewed."
 dash_config = "Configure"
+dash_adv_log = "Add a button to display Filter's advanced logic "
 
 ; View Page
 popover = "Copy data below to clipboard"
