--- a/lang/English.ini
+++ b/lang/English.ini
@@ -12,7 +12,7 @@ dash_event = "Include <code>redcap_event_name</code> in the report."
 dash_combine = "Combine rows representing the same record."
 dash_empty = "Remove rows with no data (i.e. empty) other than <code>redcap_</code> variables and <code>record_id</code>."
 dash_range = "Add a date range live filter for common time periods. Date field: "
-dash_report_logic = "Add a button to toggle display of the reports filter logic"
+dash_report_logic = "Add a button to toggle display of the reports filter logic."
 dash_writeback = "Add a button to write data back to the database. Useful for removing records from a report or flagging records as reviewed."
 dash_config = "Configure"
 
