Cleanup JS display for the report logic

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -22,6 +22,7 @@ filter = "Filter Range On..."
 hide_event = "Hide Event Column"
 hide_repeat = "Hide Repeating Form Columns"
 live_date = "Date Range"
+logic = "Report Logic"
 
 ; Edit Page Modal
 modal_edit_1  = "DB Writeback Config"
