Add username as a wb option

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -37,6 +37,7 @@ modal_edit_9  = "Static"
 modal_edit_10 = "Today's Date"
 modal_edit_11 = "Allow Data Overwrites"
 modal_edit_12 = "Increment Write Value per Row"
+modal_edit_13 = "Username"
 
 ; View Page Modal
 modal_view_1  = "No Records"
