Added edit support for an event mapping. No front end usage right now

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -38,6 +38,14 @@ modal_edit_10 = "Today's Date"
 modal_edit_11 = "Allow Data Overwrites"
 modal_edit_12 = "Increment Write Value per Row"
 modal_edit_13 = "Username"
+modal_edit_14 = "Button Text"
+modal_edit_15 = "Popup Message"
+modal_edit_16 = "Footer Text"
+modal_edit_17 = "Field Selection"
+modal_edit_18 = "Static"
+modal_edit_19 = "Event to Field Mapping"
+modal_edit_20 = "Mapping"
+modal_edit_21 = "event_name_arm_1, target_field"
 
 ; View Page Modal
 modal_view_1  = "No Records"
