Updating language strings

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -47,6 +47,15 @@ modal_edit_19 = "Event to Field Mapping"
 modal_edit_20 = "Mapping"
 modal_edit_21 = "event_name_arm_1, target_field"
 
+; View Date Dropdown
+dropdown_1 = "Yesterday"
+dropdown_7 = "Past Week"
+dropdown_14 = "Past 2 Weeks"
+dropdown_30 = "Past Month"
+dropdown_60 = "Past 2 Months"
+dropdown_90 = "Past 3 Months"
+dropdown_365 = "Past Year"
+
 ; View Page Modal
 modal_view_1  = "No Records"
 modal_view_2  = "Nothin' to do boss"
