Remove old global, minor style fixes, remove js-cookie

--- a/lang/English.ini
+++ b/lang/English.ini
@@ -1,6 +1,6 @@
 module_name = "Report Tweaks"
 module_desc = "Configurable Display Enhancements for REDCap Reports"
-module_info = "This module is configured via the edit report screen. Individual user configuration is saved via a cookie on the user's browser.<br><br><a>Click here to view all saved configuration.</a>"
+module_info = "This module is configured via the edit report screen. Individual user configuration is saved in the user's local storage.<br><br><a>Click here to view all saved configuration.</a>"
 module_json = "<b>Json Object</b>"
 
 ; Warnings
