--- a/lang/English.ini
+++ b/lang/English.ini
@@ -13,6 +13,7 @@ dash_combine = "Combine rows representing the same record."
 dash_empty = "Remove rows with no data (i.e. empty) other than <code>redcap_</code> variables and <code>record_id</code>."
 dash_range = "Add a date range live filter for common time periods. Date field: "
 dash_report_logic = "Add a button to toggle display of the reports filter logic."
+dash_collapse = "Collapse the report description if longer than five lines."
 dash_writeback = "Add a button to write data back to the database. Useful for removing records from a report or flagging records as reviewed."
 dash_config = "Configure"
 
@@ -23,6 +24,7 @@ hide_event = "Hide Event Column"
 hide_repeat = "Hide Repeating Form Columns"
 live_date = "Date Range"
 logic = "Report Logic"
+collapse = "Expand Report Description"
 
 ; Edit Page Modal
 modal_edit_1  = "DB Writeback Config"
